packages/system/dashboard/templates/incloud-web-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: appSpec-0.1.0
  name: incloud-web-nginx
  namespace: incloud-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: incloud-web
      app.kubernetes.io/name: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap-configurationnginxfile: 258c66b019c8c7f4a5d0a78dfd7bf297ce486b213346fbd2879c466abfc377e0
      labels:
        app.kubernetes.io/instance: incloud-web
        app.kubernetes.io/name: nginx
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - appSpec
                    - key: app.kubernetes.io/instance
                      operator: In
                      values:
                        - incloud-web
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - image: nginxinc/nginx-unprivileged:1.29-alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          name: nginx
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              ephemeral-storage: 50Mi
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add: []
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 101
            seccompProfile:
              type: RuntimeDefault
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: configurationnginxfile
              subPath: nginx-config
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      preemptionPolicy: null
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      runtimeClassName: null
      schedulerName: default-scheduler
      serviceAccountName: incloud-web-nginx
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            name: incloud-web-nginx-config
          name: configurationnginxfile
