packages/system/dashboard/templates/console-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cozy-dashboard-console
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: cozy-dashboard
    app.kubernetes.io/name: console
  type: ClusterIP
