packages/system/dashboard/templates/gatekeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: incloud-web-gatekeeper
spec:
  ports:
    - name: ingress
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/name: gatekeeper
  type: ClusterIP
