packages/system/dashboard/templates/incloud-web-gatekeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: gatekeeper
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: appSpec-0.1.0
  name: incloud-web-gatekeeper
  namespace: incloud-web
spec:
  ports:
    - name: ingress
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/name: gatekeeper
  type: ClusterIP
