packages/system/dashboard/templates/incloud-web-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: appSpec-0.1.0
  name: incloud-web-nginx
  namespace: incloud-web
spec:
  ports:
    - name: nginx-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/name: nginx
  type: ClusterIP
