packages/system/dashboard/templates/incloud-web-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: web
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: appSpec-0.1.0
  name: incloud-web-web
  namespace: incloud-web
spec:
  ports:
    - name: bff-http
      port: 64231
      protocol: TCP
      targetPort: 64231
    - name: web-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/name: web
  type: ClusterIP
