packages/system/dashboard/templates/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: incloud-web-nginx
  namespace: incloud-web
spec:
  ports:
    - name: nginx-http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: incloud-web
    app.kubernetes.io/name: nginx
  type: ClusterIP
