packages/system/dashboard/templates/incloud-web-incloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-ingress-class: tenant-root
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    chart: helm-inserter-0.2.5
    heritage: Helm
    release: incloud-web
  name: incloud-web-incloud-ingress
  namespace: incloud-web
spec:
  ingressClassName: tenant-root
  rules:
    - host: incloud.cozydev4.lllamnyp.su
      http:
        paths:
          - backend:
              service:
                name: incloud-web-gatekeeper
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - incloud.cozydev4.lllamnyp.su
      secretName: incloud-web-tls
